// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`installDependencies getInstallArgs 應該在 preferOffline 模式下加入對應選項 / Should add prefer-offline option 1`] = `
[
  "add",
  "lodash",
  "axios",
  "--prefer-offline",
  "--link-duplicates",
  "--no-node-version-check",
  "--ignore-optional",
]
`;

exports[`installDependencies getInstallArgs 應該在 quiet 模式下加入 --quiet / Should add --quiet in quiet mode 1`] = `
[
  "add",
  "lodash",
  "axios",
  "--quiet",
  "--link-duplicates",
  "--no-node-version-check",
  "--ignore-optional",
]
`;

exports[`installDependencies getInstallArgs 應該為 npm 產生正確的安裝參數 / Should generate correct install args for npm 1`] = `
[
  "install",
  "lodash",
  "axios",
  "--no-save",
]
`;

exports[`installDependencies getInstallArgs 應該為 pnpm 產生正確的安裝參數 / Should generate correct install args for pnpm 1`] = `
[
  "add",
  "lodash",
  "axios",
  "--ignore-scripts",
]
`;

exports[`installDependencies getInstallArgs 應該為 yarn 產生正確的安裝參數 / Should generate correct install args for yarn 1`] = `
[
  "add",
  "lodash",
  "axios",
  "--link-duplicates",
  "--no-node-version-check",
  "--ignore-optional",
]
`;

exports[`installDependencies getInstallArgs 應該過濾掉空值參數 / Should filter out null values 1`] = `
[
  "add",
  "lodash",
  "axios",
  "--link-duplicates",
  "--no-node-version-check",
  "--ignore-optional",
]
`;
